# ig_manager

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
ig_manager/gui/views/: main_view.py
ig_manager/guirc/: imagens_rc.py  main_view_rc.py
src/automators/: android_automator.py  automator_factory.py
src/bot/: bot.py  instagram_bot.py  instagram_bot_facade.py  start_facade.py
src/clients/: actions_client.py
src/gui/: constants.py
src/gui/controllers/: config_controller.py  devices_controller.py  groups_controller.py  profiles_controller.py  start_controller.py
src/gui/models/: config_model.py  devices_model.py  groups_model.py  profile_model.py  profiles_model.py
src/gui/repository/: config_repository.py  groups_repository.py  profiles_repository.py
src/gui/resources/: add_profiles_view_rc.py  edit_profile_view_rc.py  group_view_rc.py  imagens_rc.py  main_view_rc.py
src/gui/services/: adb_service.py  profiles_formatter_service.py  profiles_service.py
src/gui/views/: add_profiles_view.py  edit_profile_view.py  group_view.py  main_view.py
src/gui/workers/: start_worker.py
src/instagram/: instagram_manager.py
src/interfaces/: i_automator.py  i_ig_selectors.py  i_manager.py  i_selectors.py
src/managers/: instagram_manager.py
src/selectors/: lite_instagram_app.py  official_instagram_app.py  official_instagram_selectors.py  selectors_factory.py
tests/integration/: test_gui_integration.py
tests/unit/: test_config_controller.py  test_config_model.py  test_main_view.py
userdata/: options.json  profiles.json
