[tool.poetry]
name = "ig-manager"
version = "0.1.0"
description = ""
authors = ["Thiago <thiagofernandes305@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
uiautomator2 = "^3.0.3"
setuptools = "^69.2.0"
pyqt5 = "=5.15.10"   
pyqt5-qt5 = "=5.15.2"


[tool.poetry.group.dev.dependencies]
weditor = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
